colab badge update

--- a/bfs.ipynb
+++ b/bfs.ipynb
@@ -5,6 +5,10 @@
    "id": "tired-lunch",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/github/juniorjvn/BreadthFirstSearch/blob/main/bfs.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "## Abstract\n",
     "In this notebook we are going to implement a function that will search a graph using the Beadth First Search algorithm.<br>\n",
     "bfs(graph, initial_state, goal_state)<br>\n",
